<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.anton46.stepsview.StepsView
        android:id="@+id/stepview_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_backgournd"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/stepview_register" />


    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_backgournd"
        android:digits="1234567890"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="8"
        android:paddingStart="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/stepview_register" />

    <TextView
        android:id="@+id/tv_code_message"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:paddingStart="30dp"
        android:text="to confirm your registration please enter your code"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/stepview_register" />


    <EditText
        android:id="@+id/et_address_mail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backgournd"
        android:hint="@string/address_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backgournd"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backgournd"
        android:hint="@string/code"
        android:inputType="number"
        android:paddingStart="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />

    <TextView
        android:id="@+id/tv_previous"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_backgournd"
        android:backgroundTint="@color/colorBlack"
        android:gravity="center"
        android:text="@string/previous"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/et_address_mail" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_backgournd"
        android:backgroundTint="@color/colorYellow"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintTop_toBottomOf="@id/et_address_mail" />

</androidx.constraintlayout.widget.ConstraintLayout>