<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_parent_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/et_address_mail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_backgournd"
        android:hint="@string/address_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/img_login_logo" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backgournd"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/et_address_mail" />


    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/tv_connexion"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_backgournd"
        android:backgroundTint="@color/colorYellow"
        android:gravity="center"
        android:text="@string/connexion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />


    <TextView
        android:id="@+id/tv_inscription"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backgournd"
        android:backgroundTint="@color/colorBlack"
        android:gravity="center"
        android:text="@string/inscription"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/tv_connexion" />


    <TextView
        android:id="@+id/tv_facebook"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/facebook_backgournd"
        android:drawableLeft="@drawable/facebook"
        android:gravity="center"
        android:paddingStart="50sp"
        android:text="@string/connexion_with_facebook"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/tv_inscription" />


    <LinearLayout
        android:id="@+id/linear_layout_facebook"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/facebook_backgournd"
        android:backgroundTint="@color/colorGreyLight"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
        app:layout_constraintTop_toBottomOf="@id/tv_facebook">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:src="@drawable/facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20sp"
            android:text="@string/connexion_with_facebook"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>